# matrix-rust-sdk-crypto-nodejs

./: .gitignore  .npmignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  download-lib.js  package-lock.json  package.json  pnpm-lock.yaml  postinstall.js
.github/: latest_matrix_sdk_failed_issue_template.md
.github/workflows/: ci.yml  latest-matrix-sdk-crypto.yml  prep-crypto-nodejs-release.yml  prep-release.yml  release-crypto-nodejs.yml  release-s390x.yml  release.yml
src/: backup.rs  backup_recovery_key.rs  device.rs  encryption.rs  events.rs  identifiers.rs  lib.rs  machine.rs  requests.rs  responses.rs  secret_storage.rs  sync_events.rs  types.rs  vodozemac.rs
tests/: backup.test.js  backup_recovery_key.test.js  identifiers.test.js  machine.test.js  requests.test.js
xtask/: Cargo.toml
xtask/src/: main.rs
