[package]
authors = ["Ivan Enderlin <ivane@element.io>"]
description = "Matrix encryption library, for NodeJS"
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk-nodejs"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-crypto-nodejs"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk-nodejs"
rust-version = "1.70"
version = "0.0.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["matrix-sdk-sqlite/bundled"]
qrcode = ["matrix-sdk-crypto/qrcode"]
tracing = ["dep:tracing-subscriber"]

[dependencies]
matrix-sdk-common = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "48220571630521fbc58529df36a0f2d4772ef5e1", features = ["js"] }
matrix-sdk-sqlite = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "48220571630521fbc58529df36a0f2d4772ef5e1", features = ["crypto-store"] }
napi = { version = "2.9.1", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2.9.1"
# Fix error[E0635]: unknown feature `stdsimd` caused by ahash < 0.8.7
ahash = "0.8.7"
serde_json = "1.0.91"
http = "1.1.0"
tracing-subscriber = { version = "^0.3.0", default-features = false, features = ["tracing-log", "time", "smallvec", "fmt", "env-filter"], optional = true }
zeroize = "1.3.0"

[dependencies.matrix-sdk-crypto]
git = "https://github.com/matrix-org/matrix-rust-sdk"
rev = "48220571630521fbc58529df36a0f2d4772ef5e1"
default-features = false
features = ["js", "automatic-room-key-forwarding"]

[build-dependencies]
napi-build = "2.0.0"
