[package]
authors = ["Ivan Enderlin <ivane@element.io>"]
description = "Matrix encryption library, for NodeJS"
edition = "2021"
homepage = "https://github.com/matrix-org/matrix-rust-sdk-nodejs"
keywords = ["matrix", "chat", "messaging", "ruma", "nio"]
license = "Apache-2.0"
name = "matrix-sdk-crypto-nodejs"
readme = "README.md"
repository = "https://github.com/matrix-org/matrix-rust-sdk-nodejs"
rust-version = "1.77"
version = "0.0.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["matrix-sdk-sqlite/bundled"]
qrcode = ["matrix-sdk-crypto/qrcode"]
tracing = ["dep:tracing-subscriber"]

[dependencies]
matrix-sdk-common = { version = "0.13.0", features = ["js"] }
matrix-sdk-sqlite = { version = "0.13.0", features = ["crypto-store"] }
napi = { version = "2.16.12", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = "2.16.12"
ahash = "0.8.11"
serde_json = "1.0.133"
http = "1.1.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["tracing-log", "time", "smallvec", "fmt", "env-filter"], optional = true }
zeroize = "1.8.1"

[dependencies.matrix-sdk-crypto]
version = "0.13.0"
default-features = false
features = ["js", "automatic-room-key-forwarding"]

[build-dependencies]
napi-build = "2.1.3"
